UI Updates, Addition of Settings and addition of Notes to Entries
